--- a/day7work1/contact_work/app/views/contacts/new.html.erb
+++ b/day7work1/contact_work/app/views/contacts/new.html.erb
@@ -1,5 +1,18 @@
-<%= form_with(model: @contact, local: true) do |form| %>
+<%= stylesheet_link_tag    "application", :media => "all" %>
 
+<p><%= notice %></p>
+<% if @contact.errors.any? %>
+  <div id="error_explanation">
+    <h2><%= @contact.errors.count %>件のエラーがあります。</h2>
+    <ul>
+    <% @contact.errors.full_messages.each do |msg| %>
+      <li><%= msg %></li>
+    <% end %>
+    </ul>
+  </div>
+<% end %>
+
+<%= form_with(model: @contact, local: true) do |form| %>
   <div class="contact_name">
     <%= form.label :name %>
     <%= form.text_field :name %>
