--- a/tclone/app/views/twiclones/new.html.erb
+++ b/tclone/app/views/twiclones/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: @twiclone, local: true) do |form| %>
+<%= form_with(model: @twiclones, local: true) do |form| %>
   <div class="blog_content">
     <%= form.label :content %>
     <%= form.text_field :content %>
