--- a/tclone/app/views/twiclones/new.html.erb
+++ b/tclone/app/views/twiclones/new.html.erb
@@ -1,4 +1,17 @@
 <%= form_with(model: @twiclones, local: true) do |form| %>
+
+  <% if @twiclones.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= @twiclones.errors.count %>件のエラーがあります。</h2>
+      <ul>
+
+      <% @twiclones.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
+
   <div class="blog_content">
     <%= form.label :content %>
     <%= form.text_field :content %>
