--- a/tclone/app/views/twiclones/edit.html.erb
+++ b/tclone/app/views/twiclones/edit.html.erb
@@ -1,8 +1,1 @@
-<%= form_with(model: @twiclones, local: true) do |form| %>
-
-  <div class="blog_content">
-    <%= form.label :content %>
-    <%= form.text_field :content %>
-  </div>
-  <%= form.submit %>
-<% end %>
+<%= render 'form' %>
