--- a/tclone/app/views/twiclones/index.html.erb
+++ b/tclone/app/views/twiclones/index.html.erb
@@ -12,6 +12,7 @@
     <td><%= twiclone.content %></td>
     <td><%= link_to 'ツイートを確認', twiclone_path(twiclone.id) %></td>
     <td><%= link_to "ツイートを編集する", edit_twiclone_path(twiclone.id) %></td>
+    <td><%= link_to "ツイートを削除する", twiclone_path(twiclone.id), method: :delete %></td>
   </tr>
 <% end %>
 </table>
