--- a/tclone/app/assets/stylesheets/twiclones.scss
+++ b/tclone/app/assets/stylesheets/twiclones.scss
@@ -1,3 +1,42 @@
-// Place all the styles related to the twiclones controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+html {
+  height: 100%;
+  font-size: 62.5%;
+}
+
+body {
+  height: 100%;
+}
+
+.header {
+  background-color: #F5B4B3;
+  height: 50px;
+  font-size: 1.5rem;
+}
+
+.footer{
+  background-color: #4D4D4D;
+  height: 100px;
+  width: 100%;
+}
+
+.container{
+  width: 980px;
+  margin: 0 auto;
+  position: relative;
+  min-height: 100%;
+  /* heightとmin-heightで挙動の違いを確認してみましょう。 */
+  /* height: 100%; */
+}
+
+.footer{
+  width: 100%;
+  height: 100px;
+  position: absolute;
+  bottom: 0;
+  background-color: #4D4D4D;
+}
+
+.footer p {
+  font-size: 1rem;
+  color: #fff;
+}
