--- a/tclone/app/views/layouts/application.html.erb
+++ b/tclone/app/views/layouts/application.html.erb
@@ -10,6 +10,12 @@
   </head>
 
   <body>
+    <header class="header">
+      <div>日常のつぶやき</div>
+    </header>
     <%= yield %>
+    <footer class="footer">
+      <p>Copyright © 2019 DIVE INC All RIGHTS RESERVED.</p>
+    </footer>
   </body>
 </html>
